--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,14 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2023.2.1"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+repositories {
+    maven {
+        url "https://growingstems.org/maven"
+    }
+}
+
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
@@ -68,6 +74,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    implementation 'org.growingstems:gstems-frc-common:1.4.0.2'
 }
 
 test {
